feat: migrate socket module